# Algo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.md
Tests/: CMakeLists.txt
Tests/List/: CMakeLists.txt  main.cpp
sort/: index.html  insertion.cpp
src/: CMakeLists.txt  prime.cpp
src/List/: CMakeLists.txt  list.cpp  list.h
src/arrays/: Array.h  dutch_flag.cpp  even_odd_segmentation.cpp  two_sum.cpp
src/list/: List.h  main.cpp
